Manufactoring/force-app/main/default/objects/mfg_Transport_And_Schedule__c/mfg_Transport_And_Schedule__c.object-meta.xml
<CustomObject>
    <label>Transport And Schedule</label>
    <nameField>
        <displayFormat>TS-{0000000000}</displayFormat>
        <label>Transport And Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transport And Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>