Manufactoring/force-app/main/default/objects/mfg_Transport_And_Schedule__c/fields/mfg_Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>mfg_Arrival_Date__c</fullName>
    <label>Arrival Date</label>
    <type>Date</type>
</CustomField>