Manufactoring/force-app/main/default/objects/mfg_Transport_And_Schedule__c/fields/mfg_Delay_Reason__c.field-meta.xml
<CustomField>
    <fullName>mfg_Delay_Reason__c</fullName>
    <label>Delay Reason</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>