Manufactoring/force-app/main/default/objects/mfg_Transport_And_Schedule__c/fields/mfg_Goods_Description__c.field-meta.xml
<CustomField>
    <fullName>mfg_Goods_Description__c</fullName>
    <label>Goods Description</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>