Manufactoring/force-app/main/default/objects/mfg_Transport_And_Schedule__c/fields/mfg_Number_of_Packages__c.field-meta.xml
<CustomField>
    <fullName>mfg_Number_of_Packages__c</fullName>
    <label>Number of Packages</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>