Manufactoring/force-app/main/default/objects/mfg_Transport_And_Schedule__c/fields/mfg_Primary_Driver_Contact__c.field-meta.xml
<CustomField>
    <fullName>mfg_Primary_Driver_Contact__c</fullName>
    <label>Primary Driver Contact</label>
    <type>Phone</type>
</CustomField>