Manufactoring/force-app/main/default/objects/mfg_Transport_And_Schedule__c/fields/mfg_Product_Status__c.field-meta.xml
<CustomField>
    <fullName>mfg_Product_Status__c</fullName>
    <label>Product Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Production</fullName>
                <default>true</default>
                <label>In Production</label>
            </value>
            <value>
                <fullName>Ready for Collection</fullName>
            </value>
            <value>
                <fullName>Products Collected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>