Manufactoring/force-app/main/default/objects/mfg_Transport_And_Schedule__c/fields/mfg_Related_Order__c.field-meta.xml
<CustomField>
    <fullName>mfg_Related_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipName>Transport_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>