Manufactoring/force-app/main/default/objects/mfg_Transport_And_Schedule__c/fields/mfg_Schedule_Status__c.field-meta.xml
<CustomField>
    <fullName>mfg_Schedule_Status__c</fullName>
    <label>Schedule Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
                <default>true</default>
                <label>Planned</label>
            </value>
            <value>
                <fullName>Awaiting Product</fullName>
            </value>
            <value>
                <fullName>In-Transit</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Delayed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>