Manufactoring/force-app/main/default/objects/mfg_Transport_And_Schedule__c/fields/mfg_Storage_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>mfg_Storage_Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Storage Warehouse</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>mfg_Warehouse__c.mfg_Type__c</field>
            <operation>equals</operation>
            <value>Storage</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>mfg_Warehouse__c</referenceTo>
    <relationshipName>Transport_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>