Manufactoring/force-app/main/default/objects/mfg_Transport_And_Schedule__c/fields/mfg_Total_Transport_Quantity__c.field-meta.xml
<CustomField>
    <fullName>mfg_Total_Transport_Quantity__c</fullName>
    <label>Total Transport Quantity</label>
    <summarizedField>mfg_Transport_Product__c.mfg_Product_Quantity__c</summarizedField>
    <summaryForeignKey>mfg_Transport_Product__c.mfg_Transport_And_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>