Manufactoring/force-app/main/default/objects/mfg_Transport_And_Schedule__c/fields/mfg_Transport_Cost__c.field-meta.xml
<CustomField>
    <fullName>mfg_Transport_Cost__c</fullName>
    <label>Transport Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>