Manufactoring/force-app/main/default/objects/mfg_Transport_And_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>mfg_Schedule_Status__c</columns>
    <columns>mfg_Product_Status__c</columns>
    <columns>mfg_Total_Transport_Quantity__c</columns>
    <columns>mfg_Related_Account__c</columns>
    <columns>mfg_Related_Order__c</columns>
    <columns>mfg_Storage_Warehouse__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>